Fixed overlapping of navbar and first card.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -190,7 +190,7 @@ td{
 /*Styles for the projects page*/
 .projectcontainer {
     position: relative;
-    top:50px;
+    top:56px;
     margin: 0 3em;
 }
 
